--- a/02-layout-restaurant/index.html
+++ b/02-layout-restaurant/index.html
@@ -91,7 +91,7 @@
                             </div>
                             <!-- 影片 -->
                             <div class="video-container">
-                            <video src="/src/fv_movie.caa5c7a.mp4" autoplay="autoplay" loop="loop" muted="muted" playsinline></video>
+                            <video src="https://cafuu-shokudou.com/_nuxt/videos/fv_movie.caa5c7a.mp4" autoplay="autoplay" loop="loop" muted="muted" playsinline></video>
                             </div>
                             <!-- sns -->
                         <ul class="sns-container">
