--- a/01-layout-resume/index.html
+++ b/01-layout-resume/index.html
@@ -101,17 +101,17 @@
             <ul class="work-experience-list">
                 <li>
                     <div class="work-period">2021/3 - 2023/8</div>
-                    <div class="company-logo"><img src="imgs/pepwing.jpeg" alt="Pepwing"></div>
+                    <!-- <div class="company-logo"><img src="imgs/pepwing.jpeg" alt="Pepwing"></div> -->
                     <div class="job-title">平面/服裝設計師.電商專員</div>
                 </li>
                 <li>
                     <div class="work-period">2020/3 - 2021/3</div>
-                    <div class="company-logo"><img src="imgs/kaldi.jpeg" alt="Kalid"></div>
+                    <!-- <div class="company-logo"><img src="imgs/kaldi.jpeg" alt="Kalid"></div> -->
                     <div class="job-title">門市銷售人員</div>
                 </li>
                 <li>
                     <div class="work-period">2017/3 - 2018/1</div>
-                    <div class="company-logo"><img src="imgs/TWINE.webp" alt="TWINE"></div>
+                    <!-- <div class="company-logo"><img src="imgs/TWINE.webp" alt="TWINE"></div> -->
                     <div class="job-title">店長</div>
                 </li>
             </ul>
