--- a/01-layout-resume/index.html
+++ b/01-layout-resume/index.html
@@ -100,15 +100,15 @@
             <h2>工作經歷</h2>
             <ul class="work-experience-list">
                 <li>
-                    <div class="work-period">2021/3 - 2023/8</div>
+                    <div class="work-period">2021 - 2023</div>
                     <div class="job-title">平面/服裝設計師</div>
                 </li>
                 <li>
-                    <div class="work-period">2020/3 - 2021/3</div>
+                    <div class="work-period">2020 - 2021</div>
                     <div class="job-title">門市銷售人員</div>
                 </li>
                 <li>
-                    <div class="work-period">2017/3 - 2018/1</div>
+                    <div class="work-period">2017 - 2018</div>
                     <div class="job-title">店長</div>
                 </li>
             </ul>
