--- a/02-layout-restaurant/index.html
+++ b/02-layout-restaurant/index.html
@@ -404,7 +404,7 @@
                                     <li>
                                         <a href="/" target="_blank"class="SNS-link">
                                             <span class="SNS-linkIcon">
-                                                <img src="/src/x.png" class="SNS-X">
+                                                <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023_original.svg" class="SNS-X">
                                             </span>
                                             <span class="SNS-linkLabel">X</span>
                                         </a>
@@ -412,7 +412,7 @@
                                     <li>
                                         <a href="/" target="_blank"class="SNS-link">
                                             <span class="SNS-linkIcon">
-                                                <img src="/src/instagram.webp" class="SNS-IG">
+                                                <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" class="SNS-IG">
                                             </span>
                                             <span class="SNS-linkLabel">INSTAGRAM</span>
                                         </a>
@@ -420,7 +420,7 @@
                                     <li>
                                         <a href="/" target="_blank"class="SNS-link">
                                             <span class="SNS-linkIcon">
-                                                <img src="/src/Facebook.png" class="SNS-FB">
+                                                <img src="https://upload.wikimedia.org/wikipedia/en/0/04/Facebook_f_logo_%282021%29.svg" class="SNS-FB">
                                             </span>
                                             <span class="SNS-linkLabel">FACEBOOK</span>
                                         </a>
