--- a/02-layout-restaurant/index.html
+++ b/02-layout-restaurant/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>天然食堂</title>
-    <link rel="icon" type="image" href="/src/fav.jpg">
+    <link rel="icon" type="image" href="https://cafuu-shokudou.com/_nuxt/img/logo.70cbfb2.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
