--- a/02-layout-restaurant/index.html
+++ b/02-layout-restaurant/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="msapplication-TileColor" content="fbefda">
     <meta data-hid="mobile-web-app-capable" name="mobile-web-app-capable" content="yes">
@@ -434,8 +435,6 @@
                                 <div class="gallery-image2">
                                     <img src="https://cafuu-shokudou.com/_nuxt/img/gallery_image_02_md@2x.d6fcc25.jpg">
                                 </div>
-                                
-x
                             </div>
                             <div class="gallery-main">
                                 <p class="gallery-body">
